--- a/coordinates.html
+++ b/coordinates.html
@@ -1,238 +1,157 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>محول الإحداثيات الذكي</title>
-    <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
-    <style>
-        body {
-            font-family: 'Tajawal', sans-serif;
-            background-color: #f4f6f9;
-            margin: 0;
-            padding: 0;
-            color: #333;
-        }
-        .container {
-            max-width: 960px;
-            margin: auto;
-            padding: 20px;
-        }
-        .card {
-            background: white;
-            border-radius: 14px;
-            box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-            padding: 30px;
-            margin-bottom: 30px;
-        }
-        h1 {
-            text-align: center;
-            color: #4285F4;
-        }
-        .upload-label {
-            display: block;
-            text-align: center;
-            margin: 20px 0;
-            font-weight: bold;
-        }
-        .upload-btn {
-            display: block;
-            width: 100%;
-            max-width: 250px;
-            margin: auto;
-            background: #4285F4;
-            color: white;
-            padding: 12px;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-        .upload-btn:hover {
-            background: #3367D6;
-        }
-        #fileName {
-            text-align: center;
-            margin-top: 10px;
-            color: #888;
-        }
-        #processBtn {
-            background: #34A853;
-            margin: 20px auto;
-            display: block;
-            padding: 12px 24px;
-            font-size: 16px;
-            color: white;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: 0.3s;
-        }
-        #processBtn:hover {
-            background: #2c844b;
-        }
-        .progress-bar {
-            width: 100%;
-            background: #ddd;
-            height: 10px;
-            border-radius: 5px;
-            overflow: hidden;
-            margin: 20px 0;
-            display: none;
-        }
-        .progress-bar-inner {
-            height: 100%;
-            width: 0;
-            background: linear-gradient(90deg, #4285F4, #34A853, #FBBC05, #EA4335);
-            animation: loading 2s infinite linear;
-        }
-        @keyframes loading {
-            0% { width: 0%; }
-            100% { width: 100%; }
-        }
-        .results-count {
-            text-align: center;
-            font-weight: bold;
-            margin: 20px 0;
-        }
-        .result-card {
-            border: 1px solid #ccc;
-            border-radius: 12px;
-            padding: 20px;
-            margin-bottom: 20px;
-            background: #fff;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        }
-        .map {
-            height: 200px;
-            width: 100%;
-            border: none;
-            border-radius: 8px;
-            margin-top: 10px;
-        }
-        .copy-btn {
-            margin-top: 10px;
-            padding: 8px 12px;
-            background: white;
-            border: 1px solid #4285F4;
-            border-radius: 6px;
-            cursor: pointer;
-            color: #4285F4;
-        }
-        .copy-btn:hover {
-            background: #eaf2ff;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>محول الإحداثيات الذكي</title>
+  <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+  <style>
+    body {font-family:'Tajawal'; background:#f4f6f9; margin:0; padding:0; color:#333;}
+    .container{max-width:960px; margin: auto; padding:20px;}
+    .card{background:#fff; border-radius:12px; box-shadow:0 2px 6px rgba(0,0,0,0.1); padding:20px; margin-bottom:20px;}
+    h1{text-align:center; color:#4285F4;}
+    .btn{display:inline-block; padding:12px 24px; font-size:16px; border:none; border-radius:8px; cursor:pointer;}
+    .btn-upload{background:#4285F4;color:#fff;}
+    .btn-upload:hover{background:#3367D6;}
+    .btn-process{background:#34A853;color:#fff;}
+    .btn-process:hover{background:#2c844b;}
+    #fileName{margin-top:10px; text-align:center; color:#666;}
+    .progress{width:100%; background:#ddd; height:12px; border-radius:6px; overflow:hidden; display:none; margin:20px 0;}
+    .progress-bar{height:100%; width:0%; background:linear-gradient(90deg,#4285F4,#34A853,#FBBC05,#EA4335);}
+    .results-count{text-align:center; font-weight:bold; margin:20px 0;}
+    .result-card{background:#fff;border:1px solid #ccc;border-radius:8px;padding:15px;margin-bottom:15px;}
+    .result-card iframe{width:100%;height:200px;border:none;border-radius:6px;margin-top:10px;}
+    .copy-btn{margin-top:10px;padding:6px 12px;border:1px solid #4285F4;border-radius:6px;background:#fff;color:#4285F4;cursor:pointer;}
+    .copy-btn:hover{background:#eaf2ff;}
+  </style>
 </head>
 <body>
-    <div class="container">
-        <h1>🔄 محول الإحداثيات الذكي</h1>
-        <div class="card">
-            <label class="upload-label">تحميل ملف Excel (بصيغة N 3121258 E 2713105)</label>
-            <input type="file" id="excelFile" style="display:none;" accept=".xlsx, .xls"/>
-            <button class="upload-btn" onclick="document.getElementById('excelFile').click()">📂 اختر ملف</button>
-            <div id="fileName">لم يتم اختيار ملف</div>
-            <button id="processBtn">🚀 معالجة الملف</button>
-            <div class="progress-bar"><div class="progress-bar-inner"></div></div>
-        </div>
+  <div class="container">
+    <h1><i class="fas fa-map-marker-alt"></i> محول الإحداثيات الذكي</h1>
 
-        <div id="results" style="display:none;">
-            <div class="results-count"></div>
-            <div id="resultsList"></div>
-        </div>
+    <div class="card">
+      <input type="file" id="excelFile" accept=".xlsx,.xls" style="display:none;"/>
+      <button class="btn btn-upload" onclick="document.getElementById('excelFile').click()">
+        <i class="fas fa-file-upload"></i> اختر ملف Excel
+      </button>
+      <div id="fileName">لم يتم اختيار ملف</div>
+      <button id="processBtn" class="btn btn-process" disabled>
+        <i class="fas fa-cogs"></i> معالجة الملف
+      </button>
+      <div class="progress"><div class="progress-bar"></div></div>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-    <script>
-        const fileInput = document.getElementById('excelFile');
-        const fileName = document.getElementById('fileName');
-        const processBtn = document.getElementById('processBtn');
-        const resultsContainer = document.getElementById('results');
-        const resultsList = document.getElementById('resultsList');
-        const resultsCount = document.querySelector('.results-count');
-        const progressBar = document.querySelector('.progress-bar');
+    <div id="results" style="display:none;">
+      <div class="results-count"></div>
+      <div id="resultsList"></div>
+    </div>
+  </div>
 
-        fileInput.addEventListener('change', () => {
-            if (fileInput.files.length > 0) {
-                fileName.innerText = "✅ الملف: " + fileInput.files[0].name;
-            } else {
-                fileName.innerText = "لم يتم اختيار ملف";
-            }
-        });
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+  <script>
+    const fileInput = document.getElementById('excelFile');
+    const fileName = document.getElementById('fileName');
+    const processBtn = document.getElementById('processBtn');
+    const progress = document.querySelector('.progress');
+    const progressBar = document.querySelector('.progress-bar');
+    const resultsContainer = document.getElementById('results');
+    const resultsCount = document.querySelector('.results-count');
+    const resultsList = document.getElementById('resultsList');
 
-        processBtn.addEventListener('click', () => {
-            if (!fileInput.files.length) {
-                alert("يرجى اختيار ملف أولاً");
-                return;
-            }
+    fileInput.addEventListener('change', () => {
+      if (fileInput.files.length) {
+        fileName.textContent = `📄 ${fileInput.files[0].name}`;
+        processBtn.disabled = false;
+      }
+    });
 
-            progressBar.style.display = "block";
-            resultsContainer.style.display = "none";
-            resultsList.innerHTML = "";
-            resultsCount.innerHTML = "";
+    processBtn.addEventListener('click', () => {
+      if (!fileInput.files.length) return;
 
-            const reader = new FileReader();
-            reader.onload = function (e) {
-                const data = new Uint8Array(e.target.result);
-                const workbook = XLSX.read(data, { type: "array" });
-                const sheet = workbook.Sheets[workbook.SheetNames[0]];
-                const rows = XLSX.utils.sheet_to_json(sheet, { header: 1 });
+      progress.style.display = 'block';
+      progressBar.style.width = '0%';
+      resultsContainer.style.display = 'none';
+      resultsList.innerHTML = '';
+      resultsCount.textContent = '';
 
-                const header = rows[0];
-                const coordIndex = header.findIndex(h => h.toString().includes("N") && h.toString().includes("E"));
-                if (coordIndex === -1) {
-                    alert("⚠️ لم يتم العثور على عمود الإحداثيات");
-                    progressBar.style.display = "none";
-                    return;
-                }
+      const reader = new FileReader();
+      reader.onload = e => {
+        const data = new Uint8Array(e.target.result);
+        const workbook = XLSX.read(data, { type: 'array' });
+        const sheet = workbook.Sheets[workbook.SheetNames[0]];
+        const rows = XLSX.utils.sheet_to_json(sheet, { header: 1 });
+        processRows(rows);
+      };
+      reader.readAsArrayBuffer(fileInput.files[0]);
+    });
 
-                const results = [];
-                for (let i = 1; i < rows.length; i++) {
-                    const raw = rows[i][coordIndex];
-                    if (!raw) continue;
+    function processRows(rows) {
+      const header = rows[0];
+      const coordCol = header.findIndex(h => (''+h).match(/N\s*\d+/i) || (''+h).match(/LAT/i));
+      const total = rows.length - 1;
+      const results = [];
 
-                    const match = raw.match(/N\s*(\d+)\s*E\s*(\d+)/);
-                    if (!match) continue;
+      for (let i = 1; i < rows.length; i++) {
+        const raw = rows[i][coordCol];
+        const pct = Math.floor((i/total)*100);
+        progressBar.style.width = pct + '%';
 
-                    const lat = convertDMS(match[1], true);
-                    const lon = convertDMS(match[2], false);
-
-                    results.push({
-                        raw: raw,
-                        lat: lat.toFixed(7),
-                        lon: lon.toFixed(7),
-                        mapUrl: `https://maps.google.com/maps?q=${lat},${lon}&z=16&output=embed`
-                    });
-                }
-
-                resultsCount.innerText = `🔍 عدد المواقع المعالجة: ${results.length}`;
-                results.forEach((item, idx) => {
-                    const div = document.createElement('div');
-                    div.className = "result-card";
-                    div.innerHTML = `
-                        <strong>📍 الموقع ${idx + 1}</strong><br/>
-                        <strong>الإحداثيات الأصلية:</strong> ${item.raw}<br/>
-                        <strong>الإحداثيات المحوّلة:</strong> ${item.lat}, ${item.lon}<br/>
-                        <iframe class="map" src="${item.mapUrl}"></iframe>
-                        <button class="copy-btn" onclick="navigator.clipboard.writeText('${item.lat},${item.lon}')">📋 نسخ الإحداثيات</button>
-                    `;
-                    resultsList.appendChild(div);
-                });
-
-                progressBar.style.display = "none";
-                resultsContainer.style.display = "block";
-            };
-            reader.readAsArrayBuffer(fileInput.files[0]);
-        });
-
-        function convertDMS(dms, isLat) {
-            const padded = dms.toString().padStart(isLat ? 7 : 7, '0');
-            const deg = parseInt(padded.slice(0, isLat ? 2 : 3));
-            const min = parseInt(padded.slice(isLat ? 2 : 3, isLat ? 4 : 5));
-            const sec = parseInt(padded.slice(isLat ? 4 : 5, isLat ? 6 : 7));
-            return deg + min / 60 + sec / 3600;
+        if (raw) {
+          const parsed = parseRaw(''+raw);
+          if (parsed) results.push(parsed);
         }
-    </script>
+      }
+      progressBar.style.width = '100%';
+      setTimeout(() => (progress.style.display='none'), 200);
+      showResults(results);
+    }
+
+    function parseRaw(raw) {
+      const m = raw.match(/N\s*(\d{6,8})\s*E\s*(\d{6,8})/) || raw.match(/'N'\|\|(\d+)\|\|'E'\|\|(\d+)/);
+      if (!m) return null;
+      const lat = toDecimal(m[1], true);
+      const lon = toDecimal(m[2], false);
+      return {
+        raw, lat: lat.toFixed(7), lon: lon.toFixed(7),
+        mapUrl: `https://www.google.com/maps?q=${lat},${lon}`,
+        iframeUrl: `https://maps.google.com/maps?q=${lat},${lon}&output=embed`
+      };
+    }
+
+    function toDecimal(dms, isLat) {
+      const p = dms.padStart(7, '0');
+      const d = parseInt(p.slice(0, isLat?2:3));
+      const m = parseInt(p.slice(isLat?2:4:(3):5));
+      const s = parseInt(p.slice(isLat?4:5,(isLat?6:7)));
+      return d + m/60 + s/3600;
+    }
+
+    function showResults(results) {
+      if (!results.length) {
+        alert('⚠️ لا توجد إحداثيات صالحة في الملف');
+        return;
+      }
+
+      resultsCount.textContent = `✅ تم تحويل ${results.length} موقعًا`;
+      resultsContainer.style.display = 'block';
+
+      results.forEach((it, i) => {
+        const div = document.createElement('div');
+        div.className = 'result-card';
+        div.innerHTML = `
+          <p><strong>📍 الموقع ${i+1}</strong></p>
+          <p><strong>الإحداثيات الأصلية:</strong> ${it.raw}</p>
+          <p><strong>الإحداثيات المحوّلة:</strong> ${it.lat}, ${it.lon}</p>
+          <iframe src="${it.iframeUrl}" loading="lazy"></iframe>
+          <button class="copy-btn" onclick="navigator.clipboard.writeText('${it.lat},${it.lon}')">
+            <i class="fas fa-copy"></i> نسخ الإحداثيات
+          </button>
+          <a href="${it.mapUrl}" target="_blank" style="margin-left:10px">🌐 فتح في Google Maps</a>
+        `;
+        resultsList.appendChild(div);
+      });
+    }
+  </script>
 </body>
 </html>
