--- a/coordinates.html
+++ b/coordinates.html
@@ -1,157 +1,179 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>محول الإحداثيات الذكي</title>
-  <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet"/>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
-  <style>
-    body {font-family:'Tajawal'; background:#f4f6f9; margin:0; padding:0; color:#333;}
-    .container{max-width:960px; margin: auto; padding:20px;}
-    .card{background:#fff; border-radius:12px; box-shadow:0 2px 6px rgba(0,0,0,0.1); padding:20px; margin-bottom:20px;}
-    h1{text-align:center; color:#4285F4;}
-    .btn{display:inline-block; padding:12px 24px; font-size:16px; border:none; border-radius:8px; cursor:pointer;}
-    .btn-upload{background:#4285F4;color:#fff;}
-    .btn-upload:hover{background:#3367D6;}
-    .btn-process{background:#34A853;color:#fff;}
-    .btn-process:hover{background:#2c844b;}
-    #fileName{margin-top:10px; text-align:center; color:#666;}
-    .progress{width:100%; background:#ddd; height:12px; border-radius:6px; overflow:hidden; display:none; margin:20px 0;}
-    .progress-bar{height:100%; width:0%; background:linear-gradient(90deg,#4285F4,#34A853,#FBBC05,#EA4335);}
-    .results-count{text-align:center; font-weight:bold; margin:20px 0;}
-    .result-card{background:#fff;border:1px solid #ccc;border-radius:8px;padding:15px;margin-bottom:15px;}
-    .result-card iframe{width:100%;height:200px;border:none;border-radius:6px;margin-top:10px;}
-    .copy-btn{margin-top:10px;padding:6px 12px;border:1px solid #4285F4;border-radius:6px;background:#fff;color:#4285F4;cursor:pointer;}
-    .copy-btn:hover{background:#eaf2ff;}
-  </style>
+    <meta charset="UTF-8">
+    <title>المحول الذكي للإحداثيات</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+    <style>
+        body {
+            font-family: 'Tajawal', sans-serif;
+            background: #f0f2f5;
+            padding: 20px;
+            text-align: center;
+        }
+        h1 { color: #333; margin-bottom: 10px; }
+        .upload-section {
+            background: #fff;
+            border-radius: 16px;
+            padding: 30px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+        }
+        input[type="file"] {
+            display: none;
+        }
+        .file-label {
+            padding: 12px 25px;
+            background: #4285F4;
+            color: #fff;
+            border-radius: 8px;
+            cursor: pointer;
+            font-weight: bold;
+        }
+        .process-btn {
+            margin-top: 20px;
+            background: #34A853;
+            color: white;
+            border: none;
+            padding: 12px 30px;
+            font-size: 16px;
+            border-radius: 8px;
+            cursor: pointer;
+        }
+        #progressBarContainer {
+            display: none;
+            margin-top: 15px;
+        }
+        #progressBar {
+            width: 100%;
+            height: 20px;
+            background-color: #ddd;
+            border-radius: 10px;
+            overflow: hidden;
+        }
+        #progressBarFill {
+            height: 100%;
+            width: 0%;
+            background-color: #34A853;
+            transition: width 0.4s;
+        }
+        .result-card {
+            margin-top: 20px;
+            padding: 20px;
+            border-radius: 12px;
+            background: #fff;
+            text-align: right;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+        iframe {
+            margin-top: 10px;
+            border: 0;
+            width: 100%;
+            height: 250px;
+            border-radius: 12px;
+        }
+    </style>
 </head>
 <body>
-  <div class="container">
-    <h1><i class="fas fa-map-marker-alt"></i> محول الإحداثيات الذكي</h1>
+    <h1>🧠 المحول الذكي للإحداثيات</h1>
+    <p>ارفع ملف Excel بصيغة تحتوي على إحداثيات مثل: <b>N 3121258 E 2713105</b></p>
 
-    <div class="card">
-      <input type="file" id="excelFile" accept=".xlsx,.xls" style="display:none;"/>
-      <button class="btn btn-upload" onclick="document.getElementById('excelFile').click()">
-        <i class="fas fa-file-upload"></i> اختر ملف Excel
-      </button>
-      <div id="fileName">لم يتم اختيار ملف</div>
-      <button id="processBtn" class="btn btn-process" disabled>
-        <i class="fas fa-cogs"></i> معالجة الملف
-      </button>
-      <div class="progress"><div class="progress-bar"></div></div>
+    <div class="upload-section">
+        <input type="file" id="excelFile" accept=".xlsx,.xls" />
+        <label for="excelFile" class="file-label">📤 اختر ملف Excel</label>
+        <button class="process-btn" onclick="processFile()">🔄 معالجة الملف</button>
+
+        <div id="progressBarContainer">
+            <div id="progressBar"><div id="progressBarFill"></div></div>
+        </div>
+
+        <div id="results"></div>
     </div>
 
-    <div id="results" style="display:none;">
-      <div class="results-count"></div>
-      <div id="resultsList"></div>
-    </div>
-  </div>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-  <script>
-    const fileInput = document.getElementById('excelFile');
-    const fileName = document.getElementById('fileName');
-    const processBtn = document.getElementById('processBtn');
-    const progress = document.querySelector('.progress');
-    const progressBar = document.querySelector('.progress-bar');
-    const resultsContainer = document.getElementById('results');
-    const resultsCount = document.querySelector('.results-count');
-    const resultsList = document.getElementById('resultsList');
-
-    fileInput.addEventListener('change', () => {
-      if (fileInput.files.length) {
-        fileName.textContent = `📄 ${fileInput.files[0].name}`;
-        processBtn.disabled = false;
-      }
-    });
-
-    processBtn.addEventListener('click', () => {
-      if (!fileInput.files.length) return;
-
-      progress.style.display = 'block';
-      progressBar.style.width = '0%';
-      resultsContainer.style.display = 'none';
-      resultsList.innerHTML = '';
-      resultsCount.textContent = '';
-
-      const reader = new FileReader();
-      reader.onload = e => {
-        const data = new Uint8Array(e.target.result);
-        const workbook = XLSX.read(data, { type: 'array' });
-        const sheet = workbook.Sheets[workbook.SheetNames[0]];
-        const rows = XLSX.utils.sheet_to_json(sheet, { header: 1 });
-        processRows(rows);
-      };
-      reader.readAsArrayBuffer(fileInput.files[0]);
-    });
-
-    function processRows(rows) {
-      const header = rows[0];
-      const coordCol = header.findIndex(h => (''+h).match(/N\s*\d+/i) || (''+h).match(/LAT/i));
-      const total = rows.length - 1;
-      const results = [];
-
-      for (let i = 1; i < rows.length; i++) {
-        const raw = rows[i][coordCol];
-        const pct = Math.floor((i/total)*100);
-        progressBar.style.width = pct + '%';
-
-        if (raw) {
-          const parsed = parseRaw(''+raw);
-          if (parsed) results.push(parsed);
+    <script>
+        function updateProgress(value) {
+            document.getElementById("progressBarContainer").style.display = "block";
+            document.getElementById("progressBarFill").style.width = value + "%";
         }
-      }
-      progressBar.style.width = '100%';
-      setTimeout(() => (progress.style.display='none'), 200);
-      showResults(results);
-    }
 
-    function parseRaw(raw) {
-      const m = raw.match(/N\s*(\d{6,8})\s*E\s*(\d{6,8})/) || raw.match(/'N'\|\|(\d+)\|\|'E'\|\|(\d+)/);
-      if (!m) return null;
-      const lat = toDecimal(m[1], true);
-      const lon = toDecimal(m[2], false);
-      return {
-        raw, lat: lat.toFixed(7), lon: lon.toFixed(7),
-        mapUrl: `https://www.google.com/maps?q=${lat},${lon}`,
-        iframeUrl: `https://maps.google.com/maps?q=${lat},${lon}&output=embed`
-      };
-    }
+        function convertDMSToDecimal(coord) {
+            const match = coord.match(/N\s*(\d+)\s*E\s*(\d+)/);
+            if (!match) return null;
+            const [_, latStr, lonStr] = match;
 
-    function toDecimal(dms, isLat) {
-      const p = dms.padStart(7, '0');
-      const d = parseInt(p.slice(0, isLat?2:3));
-      const m = parseInt(p.slice(isLat?2:4:(3):5));
-      const s = parseInt(p.slice(isLat?4:5,(isLat?6:7)));
-      return d + m/60 + s/3600;
-    }
+            function dmsToDecimal(dms, isLat) {
+                const padded = dms.padStart(isLat ? 7 : 7, '0');
+                const degDigits = isLat ? 2 : 3;
+                const deg = parseInt(padded.slice(0, degDigits));
+                const min = parseInt(padded.slice(degDigits, degDigits + 2));
+                const sec = parseInt(padded.slice(degDigits + 2, degDigits + 2 + 2));
+                return deg + min / 60 + sec / 3600;
+            }
 
-    function showResults(results) {
-      if (!results.length) {
-        alert('⚠️ لا توجد إحداثيات صالحة في الملف');
-        return;
-      }
+            const lat = dmsToDecimal(latStr, true);
+            const lon = dmsToDecimal(lonStr, false);
+            return { lat, lon };
+        }
 
-      resultsCount.textContent = `✅ تم تحويل ${results.length} موقعًا`;
-      resultsContainer.style.display = 'block';
+        function processFile() {
+            const file = document.getElementById("excelFile").files[0];
+            if (!file) return alert("يرجى اختيار ملف Excel أولاً");
 
-      results.forEach((it, i) => {
-        const div = document.createElement('div');
-        div.className = 'result-card';
-        div.innerHTML = `
-          <p><strong>📍 الموقع ${i+1}</strong></p>
-          <p><strong>الإحداثيات الأصلية:</strong> ${it.raw}</p>
-          <p><strong>الإحداثيات المحوّلة:</strong> ${it.lat}, ${it.lon}</p>
-          <iframe src="${it.iframeUrl}" loading="lazy"></iframe>
-          <button class="copy-btn" onclick="navigator.clipboard.writeText('${it.lat},${it.lon}')">
-            <i class="fas fa-copy"></i> نسخ الإحداثيات
-          </button>
-          <a href="${it.mapUrl}" target="_blank" style="margin-left:10px">🌐 فتح في Google Maps</a>
-        `;
-        resultsList.appendChild(div);
-      });
-    }
-  </script>
+            const reader = new FileReader();
+            reader.onload = function (e) {
+                const data = new Uint8Array(e.target.result);
+                const workbook = XLSX.read(data, { type: 'array' });
+                const sheet = workbook.Sheets[workbook.SheetNames[0]];
+                const rows = XLSX.utils.sheet_to_json(sheet, { header: 1 });
+
+                let coordColIndex = -1;
+                const header = rows[0];
+                for (let i = 0; i < header.length; i++) {
+                    for (let row = 1; row < rows.length; row++) {
+                        const val = rows[row][i];
+                        if (typeof val === "string" && val.match(/N\s*\d+\s*E\s*\d+/)) {
+                            coordColIndex = i;
+                            break;
+                        }
+                    }
+                    if (coordColIndex !== -1) break;
+                }
+
+                if (coordColIndex === -1) {
+                    alert("لم يتم العثور على عمود الإحداثيات بالشكل المطلوب.");
+                    return;
+                }
+
+                const resultsContainer = document.getElementById("results");
+                resultsContainer.innerHTML = "";
+
+                for (let i = 1; i < rows.length; i++) {
+                    const progress = Math.floor((i / rows.length) * 100);
+                    updateProgress(progress);
+
+                    const row = rows[i];
+                    const raw = row[coordColIndex];
+                    const converted = convertDMSToDecimal(raw);
+                    if (!converted) continue;
+
+                    const { lat, lon } = converted;
+                    const link = `https://www.google.com/maps?q=${lat},${lon}&z=16`;
+                    const embed = `https://maps.google.com/maps?q=${lat},${lon}&z=16&output=embed`;
+
+                    const card = document.createElement("div");
+                    card.className = "result-card";
+                    card.innerHTML = `
+                        <p><b>الإحداثيات الأصلية:</b> ${raw}</p>
+                        <p><b>الإحداثيات العشرية:</b> ${lat.toFixed(7)}, ${lon.toFixed(7)}</p>
+                        <p><a href="${link}" target="_blank">📍 فتح في خرائط Google</a></p>
+                        <iframe src="${embed}" allowfullscreen loading="lazy"></iframe>
+                    `;
+                    resultsContainer.appendChild(card);
+                }
+
+                updateProgress(100);
+            };
+            reader.readAsArrayBuffer(file);
+        }
+    </script>
 </body>
 </html>
