--- a/coordinates.html
+++ b/coordinates.html
@@ -1,179 +1,92 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-    <meta charset="UTF-8">
-    <title>المحول الذكي للإحداثيات</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-    <style>
-        body {
-            font-family: 'Tajawal', sans-serif;
-            background: #f0f2f5;
-            padding: 20px;
-            text-align: center;
-        }
-        h1 { color: #333; margin-bottom: 10px; }
-        .upload-section {
-            background: #fff;
-            border-radius: 16px;
-            padding: 30px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.05);
-        }
-        input[type="file"] {
-            display: none;
-        }
-        .file-label {
-            padding: 12px 25px;
-            background: #4285F4;
-            color: #fff;
-            border-radius: 8px;
-            cursor: pointer;
-            font-weight: bold;
-        }
-        .process-btn {
-            margin-top: 20px;
-            background: #34A853;
-            color: white;
-            border: none;
-            padding: 12px 30px;
-            font-size: 16px;
-            border-radius: 8px;
-            cursor: pointer;
-        }
-        #progressBarContainer {
-            display: none;
-            margin-top: 15px;
-        }
-        #progressBar {
-            width: 100%;
-            height: 20px;
-            background-color: #ddd;
-            border-radius: 10px;
-            overflow: hidden;
-        }
-        #progressBarFill {
-            height: 100%;
-            width: 0%;
-            background-color: #34A853;
-            transition: width 0.4s;
-        }
-        .result-card {
-            margin-top: 20px;
-            padding: 20px;
-            border-radius: 12px;
-            background: #fff;
-            text-align: right;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        }
-        iframe {
-            margin-top: 10px;
-            border: 0;
-            width: 100%;
-            height: 250px;
-            border-radius: 12px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>محول إحداثيات ذكي</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+  <style>
+    body { font-family: 'Tajawal', sans-serif; background: #f9f9f9; padding: 30px; text-align: center; }
+    .upload-btn { background: #4285f4; color: #fff; padding: 12px 24px; border: none; border-radius: 8px; cursor: pointer; font-size: 16px; }
+    .progress-bar-container { background: #ddd; height: 20px; border-radius: 10px; margin: 20px 0; overflow: hidden; }
+    .progress-bar { height: 100%; width: 0%; background: #34a853; transition: width 0.4s ease; }
+    .results { display: flex; flex-direction: column; gap: 20px; margin-top: 30px; }
+    .card { background: #fff; border-radius: 12px; padding: 20px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); text-align: right; }
+    iframe { width: 100%; height: 250px; border: none; border-radius: 8px; margin-top: 10px; }
+  </style>
 </head>
 <body>
-    <h1>🧠 المحول الذكي للإحداثيات</h1>
-    <p>ارفع ملف Excel بصيغة تحتوي على إحداثيات مثل: <b>N 3121258 E 2713105</b></p>
 
-    <div class="upload-section">
-        <input type="file" id="excelFile" accept=".xlsx,.xls" />
-        <label for="excelFile" class="file-label">📤 اختر ملف Excel</label>
-        <button class="process-btn" onclick="processFile()">🔄 معالجة الملف</button>
+  <h1>🔍 محول إحداثيات ذكي</h1>
+  <input type="file" id="fileInput" accept=".xlsx, .xls" class="upload-btn">
+  <div class="progress-bar-container"><div class="progress-bar" id="progressBar"></div></div>
+  <div class="results" id="results"></div>
 
-        <div id="progressBarContainer">
-            <div id="progressBar"><div id="progressBarFill"></div></div>
-        </div>
+  <script>
+    document.getElementById("fileInput").addEventListener("change", async function(e) {
+      const file = e.target.files[0];
+      if (!file) return;
 
-        <div id="results"></div>
-    </div>
+      const progressBar = document.getElementById("progressBar");
+      progressBar.style.width = "0%";
 
-    <script>
-        function updateProgress(value) {
-            document.getElementById("progressBarContainer").style.display = "block";
-            document.getElementById("progressBarFill").style.width = value + "%";
-        }
+      const arrayBuffer = await file.arrayBuffer();
+      const workbook = XLSX.read(arrayBuffer, { type: "array" });
+      const sheet = workbook.Sheets[workbook.SheetNames[0]];
+      const data = XLSX.utils.sheet_to_json(sheet, { header: 1 });
 
-        function convertDMSToDecimal(coord) {
-            const match = coord.match(/N\s*(\d+)\s*E\s*(\d+)/);
-            if (!match) return null;
-            const [_, latStr, lonStr] = match;
+      const headerRow = data[0];
+      const coordColIndex = headerRow.findIndex(col => typeof col === 'string' && col.includes("'N'||LATITUDE||'E'||LONGITUDE"));
+      if (coordColIndex === -1) {
+        alert("لم يتم العثور على عمود إحداثيات بصيغة 'N'||LAT||'E'||LON");
+        return;
+      }
 
-            function dmsToDecimal(dms, isLat) {
-                const padded = dms.padStart(isLat ? 7 : 7, '0');
-                const degDigits = isLat ? 2 : 3;
-                const deg = parseInt(padded.slice(0, degDigits));
-                const min = parseInt(padded.slice(degDigits, degDigits + 2));
-                const sec = parseInt(padded.slice(degDigits + 2, degDigits + 2 + 2));
-                return deg + min / 60 + sec / 3600;
-            }
+      const resultsDiv = document.getElementById("results");
+      resultsDiv.innerHTML = "";
+      const totalRows = data.length - 1;
 
-            const lat = dmsToDecimal(latStr, true);
-            const lon = dmsToDecimal(lonStr, false);
-            return { lat, lon };
-        }
+      for (let i = 1; i < data.length; i++) {
+        const row = data[i];
+        const cell = row[coordColIndex];
+        if (!cell) continue;
 
-        function processFile() {
-            const file = document.getElementById("excelFile").files[0];
-            if (!file) return alert("يرجى اختيار ملف Excel أولاً");
+        const parsed = parseSmartCoordinates(cell);
+        if (!parsed) continue;
 
-            const reader = new FileReader();
-            reader.onload = function (e) {
-                const data = new Uint8Array(e.target.result);
-                const workbook = XLSX.read(data, { type: 'array' });
-                const sheet = workbook.Sheets[workbook.SheetNames[0]];
-                const rows = XLSX.utils.sheet_to_json(sheet, { header: 1 });
+        const card = document.createElement("div");
+        card.className = "card";
+        card.innerHTML = `
+          <p><strong>📍 الإحداثيات الأصلية:</strong> ${cell}</p>
+          <p><strong>📌 الإحداثيات المحولة:</strong> ${parsed.lat.toFixed(6)}°, ${parsed.lon.toFixed(6)}°</p>
+          <a href="https://maps.google.com?q=${parsed.lat},${parsed.lon}" target="_blank" style="color: #1a73e8;">فتح في خرائط جوجل</a>
+          <iframe src="https://maps.google.com/maps?q=${parsed.lat},${parsed.lon}&z=16&output=embed" loading="lazy"></iframe>
+        `;
+        resultsDiv.appendChild(card);
 
-                let coordColIndex = -1;
-                const header = rows[0];
-                for (let i = 0; i < header.length; i++) {
-                    for (let row = 1; row < rows.length; row++) {
-                        const val = rows[row][i];
-                        if (typeof val === "string" && val.match(/N\s*\d+\s*E\s*\d+/)) {
-                            coordColIndex = i;
-                            break;
-                        }
-                    }
-                    if (coordColIndex !== -1) break;
-                }
+        progressBar.style.width = `${((i / totalRows) * 100).toFixed(0)}%`;
+      }
 
-                if (coordColIndex === -1) {
-                    alert("لم يتم العثور على عمود الإحداثيات بالشكل المطلوب.");
-                    return;
-                }
+      progressBar.style.width = "100%";
+    });
 
-                const resultsContainer = document.getElementById("results");
-                resultsContainer.innerHTML = "";
+    function parseSmartCoordinates(text) {
+      const match = text.match(/N\s*(\d+)\s+E\s*(\d+)/i);
+      if (!match) return null;
+      const lat = convertDMS(match[1], true);
+      const lon = convertDMS(match[2], false);
+      return { lat, lon };
+    }
 
-                for (let i = 1; i < rows.length; i++) {
-                    const progress = Math.floor((i / rows.length) * 100);
-                    updateProgress(progress);
+    function convertDMS(dms, isLat) {
+      const padded = dms.toString().padStart(7, '0');
+      const degDigits = isLat ? 2 : 3;
+      const deg = parseInt(padded.slice(0, degDigits));
+      const min = parseInt(padded.slice(degDigits, degDigits + 2));
+      const sec = parseInt(padded.slice(degDigits + 2, degDigits + 2 + 2));
+      return deg + (min / 60) + (sec / 3600);
+    }
+  </script>
 
-                    const row = rows[i];
-                    const raw = row[coordColIndex];
-                    const converted = convertDMSToDecimal(raw);
-                    if (!converted) continue;
-
-                    const { lat, lon } = converted;
-                    const link = `https://www.google.com/maps?q=${lat},${lon}&z=16`;
-                    const embed = `https://maps.google.com/maps?q=${lat},${lon}&z=16&output=embed`;
-
-                    const card = document.createElement("div");
-                    card.className = "result-card";
-                    card.innerHTML = `
-                        <p><b>الإحداثيات الأصلية:</b> ${raw}</p>
-                        <p><b>الإحداثيات العشرية:</b> ${lat.toFixed(7)}, ${lon.toFixed(7)}</p>
-                        <p><a href="${link}" target="_blank">📍 فتح في خرائط Google</a></p>
-                        <iframe src="${embed}" allowfullscreen loading="lazy"></iframe>
-                    `;
-                    resultsContainer.appendChild(card);
-                }
-
-                updateProgress(100);
-            };
-            reader.readAsArrayBuffer(file);
-        }
-    </script>
 </body>
 </html>
